--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,1 +1,11 @@
+.search-section{
+    margin: 30px 10px;
 
+    .title{
+        display: flex;
+        margin-bottom: 5px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: bold;
+        color: rgb(92, 92, 92);
+    }
+}
