--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,11 +1,46 @@
-.search-section{
-    margin: 30px 10px;
+body{
+    background: rgb(14, 13, 13);
+    color: white;
+}
+.search-section {
+  margin: 30px 10px;
 
-    .title{
-        display: flex;
-        margin-bottom: 5px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-weight: bold;
-        color: rgb(92, 92, 92);
+  .title {
+    display: flex;
+    margin-bottom: 5px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: white;
+  }
+}
+.animes {
+  display: flex;
+  gap: 70px;
+  > div {
+    min-width: 400px;
+  }
+  &__search {
+    .favorite {
+      padding: 30px;
+      background: lightpink;
+      color: black;
     }
+  }
+  .anime {
+    display: flex;
+    flex-direction: column;
+    width: min-content;
+    gap: 10px;
+    margin-bottom: 20px;
+    img {
+      width: 200px;
+    }
+
+    &--favorite {
+        color: lightpink;
+      img {
+        width: 100px;
+      }
+    }
+  }
 }
