--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -49,12 +49,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 20px;
   }
     &__search {
       display: flex;
       align-items: center;
       flex-direction: column;
       border: 1px solid #1cedae;
+      padding-top: 20px;
 
       .favorite {
         padding: 30px;
